premier commit stylé

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -32,7 +32,7 @@
                     </div>
                      <div class="modal-footer pull-right">
                             <h6>
-                                <a href="#pablo" class="link">S'inscrire</a>
+                                <a href="{% url 'page_register' %}" class="link">S'inscrire</a>
                             </h6>
                         </div>
                 </div>
