--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,7 +10,7 @@
                                 
                             </div>
                             <div class="card-body text-center">
-                                <button class="btn btn-primary btn-round btn-lg btn-block">S'inscrire</button>
+                                <a class="btn btn-primary btn-round btn-lg btn-block" href="{% url 'inscriptions' %}">S'inscrire</a>
                             </div>
                             <div class="card-footer">
                                 <div class="stats">
@@ -27,7 +27,7 @@
                                 
                             </div>
                             <div class="card-body text-center">
-                                <button class="btn btn-primary btn-round btn-lg btn-block">S'inscrire</button>
+                                <a class="btn btn-primary btn-round btn-lg btn-block" href="{% url 'inscriptions' %}">S'inscrire</a>
                             </div>
                             <div class="card-footer">
                                 <div class="stats">
