--- a/app/templates/javascript.html
+++ b/app/templates/javascript.html
@@ -6,6 +6,7 @@
 <script src="{% static 'js/core/popper.min.js' %}"></script>
 <script src="{% static 'js/core/bootstrap.min.js' %}"></script>
 <script src="{% static 'js/plugins/perfect-scrollbar.jquery.min.js' %}"></script>
+<script src="{% static 'js/plugins/bootstrap-selectpicker.js' %}" type="text/javascript"></script>
 <!-- Chart JS -->
 <script src="{% static 'js/plugins/chartjs.min.js' %}"></script>
 <!--  Notifications Plugin    -->
@@ -113,6 +114,50 @@ $("#form_button").click(function(event){
 
 
 });
+
+$("#btn-register").click(function(event){
+
+    if($("#mdp1").val()!=$("#mdp1").val()){
+        event.preventDefault();
+        notifier("Les deux mots de passe ne correspondent pas !","danger");
+
+    } 
+
+
+
+
+});
+
+
+  {% if notif %}
+
+    notifier("{{notif}}","danger");
+
+    {% endif %}
+
+
+  {% if good_notif %}
+
+    notifier("{{good_notif}}","success");
+
+    {% endif %}
+
+
+
+
+    $(document).ready(function(){
+    //    Activate bootstrap-select
+    if($(".selectpicker").length != 0){
+        $(".selectpicker").selectpicker({
+            iconBase: "now-ui-icons",
+            tickIcon: "ui-1_check"
+        });
+    };
+});
+
+
+
+
 
 
 
