--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -4,11 +4,11 @@
             <div class="col-lg-12 col-sm-12">
                
 								<div class="card">
-                    <div class="header">
+                    <div class="card-header">
                         <h4 class="title">Inscription</h4>
                     </div>
 
-                    <div class="content">
+                    <div class="card-body">
                     	<div class="col md-12">
 	                    	<p>{{message}}</p>
 	                    </div>
@@ -16,10 +16,62 @@
                         <form method="post">
                         {% csrf_token %}
                             <div class="row">
+                                <div class="col-md-3">
+                                    <div class="form-group">
+                                        <label>Prénom</label>
+                                        <input type="text" class="form-control border-input" placeholder="Prénom" name="prenom">
+                                    </div>
+                                </div>
+                                <div class="col-md-3">
+                                    <div class="form-group">
+                                        <label>Nom</label>
+                                        <input type="text" class="form-control border-input" placeholder="Nom" name="nom">
+                                    </div>
+                                </div>
+                                <div class="col-md-3">
+                                    <div class="form-group">
+                                        <label data-toggle="tooltip" data-placement="top" title="L'année à laquelle vous êtes arrivés à l'école">Promo (?)</label>
+                                        <input type="number" class="form-control border-input" placeholder="Promo" name="promo">
+                                    </div>
+                                </div>
+                                <div class="col-md-3">
+                                    <label data-toggle="tooltip" data-placement="top" title="Votre classement réel ou par défaut celui que vous pensez avoir (plus vous saurez dire avec précision votre classement, plus les matchs que vous jouerez seront intéressants)">Classement FFT (?)</label>
+                                    <select class="selectpicker" data-size="2" data-style="btn btn-primary btn-round" title="Classement FFT" name="classement">
+                                        <option value="NC">Non classé</option>
+                                        <option disabled value="disabled">4ème série</option>
+                                        <option value="40">40</option>
+                                        <option value="30/5">30/5</option>
+                                        <option value="30/4">30/4</option>
+                                        <option value="30/3">30/3</option>
+                                        <option value="30/2">30/2</option>
+                                        <option value="30/1">30/1</option>
+                                        <option disabled value="disabled">3ème série</option>
+                                        <option value="30">30</option>
+                                        <option value="15/5">15/5</option>
+                                        <option value="15/4">15/4</option>
+                                        <option value="15/3">15/3</option>
+                                        <option value="15/2">15/2</option>
+                                        <option value="15/1">15/1</option>
+                                        <option disabled value="disabled">2ème série</option>
+                                        <option value="15">15</option>
+                                        <option value="5/6">5/6</option>
+                                        <option value="4/6">4/6</option>
+                                        <option value="3/6">3/6</option>
+                                        <option value="2/6">2/6</option>
+                                        <option value="1/6">1/6</option>
+                                        <option value="0">0</option>
+                                        <option value="<0">< 0</option>
+                                        <option value="<0">< 0</option>
+
+                                    </select>
+                                </div>
+                                
+                            </div>
+                            <div class="row">
                                 <div class="col-md-6">
                                     <div class="form-group">
-                                        <label>Pseudo</label>
-                                        <input type="text" class="form-control border-input" placeholder="Pseudo" name="username">
+                                        <label data-toggle="tooltip" data-placement="top" title="Ingénieur, bachelor, doctorant, master, DFHM, etc.">Formation (?)</label>
+                                        <input type="text" class="form-control border-input" placeholder="École" name="ecole">
                                     </div>
                                 </div>
                                 <div class="col-md-6">
@@ -27,31 +79,29 @@
                                         <label>Adresse Email</label>
                                         <input type="email" class="form-control border-input" placeholder="Email" name="email">
                                     </div>
-                                </div>
-                                
-
-
+                                </div>                               
                             </div>
+
+
 
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="form-group">
                                         <label>Mot de passe</label>
-                                        <input type="password" class="form-control border-input" name="mdp">
+                                        <input type="password" id="mdp1" class="form-control border-input" name="mdp">
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-group">
                                         <label>Retaper le mot de passe</label>
-                                        <input type="password" class="form-control border-input" name="mdp2">
+                                        <input type="password" id="mdp2" class="form-control border-input" name="mdp2">
                                     </div>
                                 </div>
 
                            
-                            <div class="text-center">
-                                <button type="submit" class="btn btn-info btn-fill btn-wd">Créer mon compte</button>
+                            <div class="card-footer text-center">
+                                <button type="submit" id="btn-register" class="btn btn-primary">Créer mon compte</button>
                             </div>
-                            <div class="clearfix"></div>
                         </form>
                     </div>
                 </div>
