--- a/app/templates/tableaux.html
+++ b/app/templates/tableaux.html
@@ -4,7 +4,7 @@
 <div class="card">
     <ul class="nav nav-tabs justify-content-center" role="tablist">
          <li class="nav-item">
-            <a class="nav-link" data-toggle="tab" href="#simple1" role="tab">Simples - Débutants</a>
+            <a class="nav-link active" data-toggle="tab" href="#simple1" role="tab">Simples - Débutants</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" data-toggle="tab" href="#simple2" role="tab">Simples - intermédiaires</a>
@@ -21,21 +21,19 @@
         <div class="tab-content text-center">
             <div class="tab-pane active" id="simple1" role="tabpanel">
 
-                  <iframe class="card" width="100%" height="800px" src="{% url 'tableau-simple1' %}"></iframe>
+                  <iframe class="card" width="100%" height="800px" src="{% static 'tableau-simple1.html' %}"></iframe>
 
 
                
             </div>
             <div class="tab-pane" id="simple2" role="tabpanel">
-                 <iframe class="card" width="100%" height="800px" src="{% url 'tableau-simple2' %}"></iframe>
+                 <iframe class="card" width="100%" height="800px" src="{% static 'tableau-simple2.html' %}"></iframe>
             </div>
             <div class="tab-pane" id="simple3" role="tabpanel">
-                <p>I think that’s a responsibility that I have, to push possibilities, to show people, this is the level that things could be at. So when you get something that has the name Kanye West on it, it’s supposed to be pushing the furthest possibilities. I will be the leader of a company that ends up being worth billions of dollars, because I got the answers. I understand culture. I am the nucleus.</p>
+                 <iframe class="card" width="100%" height="800px" src="{% static 'tableau-simple3.html' %}"></iframe>
             </div>
             <div class="tab-pane" id="equipe" role="tabpanel">
-                <p>
-                    "I will be the leader of a company that ends up being worth billions of dollars, because I got the answers. I understand culture. I am the nucleus. I think that’s a responsibility that I have, to push possibilities, to show people, this is the level that things could be at."
-                </p>
+                 <iframe class="card" width="100%" height="800px" src="{% static 'tableau-equipes.html' %}"></iframe>
             </div>
         </div>
     </div>
