--- a/app/templates/top-menu.html
+++ b/app/templates/top-menu.html
@@ -29,12 +29,19 @@
                                     </p>
                                 </a>
                                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                                    <a class="dropdown-item" href="#">Mon profil</a>
-                                    <a class="dropdown-item" href="#">Mes matchs</a>
+                                    <a class="dropdown-item" href="{% url 'profil' %}">Mon profil</a>
+                                    <a class="dropdown-item" href="{% url 'matchs' %}">Mes matchs</a>
                                     <a class="dropdown-item" href="{% url 'deconnect' %}">Se déconnecter</a>
                                 </div>
                             </li>
                             {% else %}
+                             <li class="nav-item">
+                                <a class="nav-link" href="{% url 'page_register' %}">
+                                    <p>
+                                        <span class="btn btn-primary">S'inscrire</span>
+                                    </p>
+                                </a>
+                            </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#pablo">
                                     <p>
